[Picture in Picture] Fix DCHECK to properly check for player id value.

Bug: 834098
Change-Id: Id40def9037ae2f9a7afc10be8b2ddcc4a9153775
Reviewed-on: https://chromium-review.googlesource.com/1016022
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Commit-Queue: apacible <apacible@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551556}
Former-commit-id: fbe7334934e7f92a015381fdb32439fae81fa7aa